domain services tests